--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -12,7 +12,7 @@ navbar:
   right:
   - icon: fa-github
     text: Source code
-    href: https://github.com/jmh579/SweetCornRNA
+    href: https://github.com/GoreLab/SweetCornRNA
 output:
   workflowr::wflow_html:
     toc: yes
